--- a/Week-04/css/styles.css
+++ b/Week-04/css/styles.css
@@ -84,6 +84,12 @@ footer {
     background-color: #AACE9B;
 }
 
+@media (min-width: 601px) {
+    form {
+        width: 90%;
+    }
+}
+
 /* Desktop resolution */
 
 @media (min-width: 1025px) {
